SLING-7162 - Update SCM information in all POM files to reference Git

--- a/pom.xml
+++ b/pom.xml
@@ -90,8 +90,8 @@
     
     <scm>
         <connection>scm:git:https://gitbox.apache.org/repos/asf/sling-org-apache-sling-resourceaccesssecurity-it.git</conncetion>
-        <developerConnection> scm:svn:https://svn.apache.org/repos/asf/sling/trunk/testing/samples/integration-tests</developerConnection>
-        <url>https://gitbox.apache.org/repos/asf?p=sling-org-apache-sling-resourceaccesssecurity-it.git.git</url>
+        <developerConnection>scm:git:https://gitbox.apache.org/repos/asf/sling-org-apache-sling-resourceaccesssecurity-it.git</developerConnection>
+        <url>https://gitbox.apache.org/repos/asf?p=sling-org-apache-sling-resourceaccesssecurity-it.git</url>
     </scm>
 
     <build>
