--- a/pom.xml
+++ b/pom.xml
@@ -91,7 +91,7 @@
     <scm>
         <connection>scm:git:https://gitbox.apache.org/repos/asf/sling-org-apache-sling-resourceaccesssecurity-it.git</connection>
         <developerConnection>scm:git:https://gitbox.apache.org/repos/asf/sling-org-apache-sling-resourceaccesssecurity-it.git</developerConnection>
-        <url>https://gitbox.apache.org/repos/asf?p=sling-org-apache-sling-resourceaccesssecurity-it.git</url>
+        <url>https://github.com/apache/sling-org-apache-sling-resourceaccesssecurity-it.git</url>
     </scm>
 
     <build>
